--- a/app/src/main/res/layout/chat_page.xml
+++ b/app/src/main/res/layout/chat_page.xml
@@ -4,100 +4,99 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#161A25"
+    android:background="@color/white"
     tools:context=".Chat_Activity">
 
 
     <LinearLayout
         android:id="@+id/search_div"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#2F315A"
+        android:layout_height="90dp"
+        android:background="@color/white"
         android:orientation="horizontal"
         >
 
-        <TextView
-            android:id="@+id/back_arrow"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/back_icon_mauve"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="30dp"/>
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/Notifications"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="  Username"
-            android:textColor="#FFFFFF"
-            android:textStyle="bold"
-            android:textSize="27sp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginTop="40dp"
-            android:layout_marginRight="30dp"/>
+            <Button
+                android:id="@+id/back_arrow"
+                android:layout_width="20dp"
+                android:layout_height="25dp"
+                android:background="@drawable/back_purple"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="15dp"/>
 
-        <TextView
-            android:id="@+id/call_btn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/call_icon_mauve"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="70dp"/>
+            <TextView
+                android:id="@+id/ChatterName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Dan"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:textSize="33sp"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/back_arrow"
+                android:layout_marginStart="15dp"/>
 
-        <TextView
-            android:id="@+id/video_call_btn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/video_call_icon_mauve"
-            android:layout_marginTop="30dp"
-            android:layout_marginLeft="20dp"/>
+            <TextView
+                android:id="@+id/call_btn"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginEnd="20dp"
+                android:background="@drawable/phone_purple"
+                android:layout_centerVertical="true"
+                android:layout_alignParentEnd="true"/>
+
+        </RelativeLayout>
 
 
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_below="@+id/search_div"
-        android:layout_above="@+id/chat_box"
-        android:orientation="vertical"
-        android:gravity="bottom">
+        android:orientation="vertical">
 
 
         <LinearLayout
-            android:paddingTop="10dp"
             android:layout_width="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_height="80dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:gravity="right">
+            android:gravity="right"
+            android:background="@drawable/chatspage_seperator_box">
 
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingTop="8dp"
-                android:paddingRight="17dp"
+                android:paddingVertical="8dp"
+                android:layout_marginEnd="17dp"
                 android:orientation="vertical">
 
                 <TextView
-                    android:layout_marginTop="7dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingVertical="11dp"
-                    android:paddingHorizontal="15dp"
-                    android:text=" I need your guidance."
-                    android:background="@drawable/purple_box_left_curve"
+                    android:text="Shayaan"
+                    android:layout_gravity="end"
+                    android:textColor="#FF0000"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hello there!"
                     android:textSize="15sp"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/black"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="10:32"
-                    android:textSize="12sp"
-
+                    android:textSize="8sp"
                     android:layout_gravity="right"
                     android:textColor="#8497D0"/>
             </LinearLayout>
@@ -107,104 +106,97 @@
 
 
         <LinearLayout
-            android:paddingTop="10dp"
             android:layout_width="match_parent"
             android:layout_gravity="center_vertical"
-            android:layout_height="80dp"
-            android:orientation="horizontal">
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:background="@drawable/chatspage_seperator_box">
 
-
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="50dp"
-                android:layout_height="70dp"
-                android:layout_marginLeft="18dp"
-                android:src="@drawable/default_profile" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingTop="8dp"
-                android:paddingLeft="17dp"
-                android:orientation="vertical">
+                android:paddingVertical="8dp"
+                android:orientation="vertical"
+                android:layout_marginStart="17dp">
 
                 <TextView
-                    android:layout_marginTop="7dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:paddingVertical="11dp"
-                    android:paddingHorizontal="15dp"
-                    android:text="How can I help you?"
-                    android:background="@drawable/purple_box_right_curve"
+                    android:text="Dan"
+                    android:textColor="#2B2E70"
+                    android:textStyle="bold"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="General Kenobi!"
                     android:textSize="15sp"
-                    android:textColor="@color/white"/>
+                    android:textColor="@color/black"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="10:32"
-                    android:paddingLeft="5dp"
-                    android:textSize="12sp"
+                    android:textSize="8sp"
                     android:textColor="#8497D0"/>
             </LinearLayout>
+
+
         </LinearLayout>
 
 
     </LinearLayout>
 
-
     <LinearLayout
-        android:id="@+id/chat_box"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:background="#F1F1F1"
         android:layout_alignParentBottom="true"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="10dp"
-        android:orientation="horizontal"
-        android:background="@drawable/grey_rounded_box">
+        android:gravity="center">
 
-        <TextView
-            android:layout_width="30dp"
+        <Button
+            android:id="@+id/camera_button"
+            android:layout_width="0dp"
             android:layout_height="30dp"
-            android:background="@drawable/paper_clip_icon"
-            android:layout_marginLeft="10dp"/>
+            android:layout_weight="1.2"
+            android:layout_marginHorizontal="5dp"
+            android:background="@drawable/camera_grey"/>
 
-        <TextView
-            android:layout_width="30dp"
+        <Button
+            android:id="@+id/gallery_button"
+            android:layout_width="0dp"
             android:layout_height="30dp"
-            android:background="@drawable/gallery_icon"/>
+            android:layout_weight="1"
+            android:layout_marginHorizontal="5dp"
+            android:background="@drawable/gallery_grey"/>
 
+        <EditText
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="9"
+            android:layout_marginHorizontal="5dp"
+            android:background="@drawable/textbox_grey"
+            android:scaleY="0.7"
+            android:paddingStart="10dp"
+            android:hint="Send a chat"
+            android:textSize="16sp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_marginTop="7dp"
-            android:gravity="bottom"
+        <Button
+            android:id="@+id/mic_button"
+            android:layout_width="0dp"
             android:layout_height="30dp"
-            android:textSize="19sp"
-            android:text=" Type something ..."
-            android:paddingBottom="5dp"
-            android:textColor="#FFFFFF"/>
+            android:layout_weight="1"
+            android:layout_marginHorizontal="5dp"
+            android:background="@drawable/microphone_grey"/>
 
-
-        <TextView
-            android:id="@+id/camera"
-            android:layout_marginLeft="40dp"
-            android:layout_width="30dp"
+        <Button
+            android:id="@+id/send_button"
+            android:layout_width="0dp"
             android:layout_height="30dp"
-            android:background="@drawable/camera_icon_white"/>
-
-        <TextView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/voice_recorder_icon"/>
-
-        <TextView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/send_arrow_icon"
-            />
-
-
-
+            android:layout_weight="0.8"
+            android:layout_marginHorizontal="5dp"
+            android:background="@drawable/send_purple"/>
 
     </LinearLayout>
 
