--- a/app/src/main/res/layout/profile_page.xml
+++ b/app/src/main/res/layout/profile_page.xml
@@ -4,45 +4,49 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:weightSum="6"
         android:orientation="horizontal">
 
-        <View
-            android:layout_marginLeft="15dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+        <Button
+            android:id="@+id/back_button"
+            android:layout_marginStart="15dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:scaleY="1.2"
+            android:scaleX="1.2"
             android:background="@drawable/drop_down_arrow_icon_purple"/>
 
         <TextView
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:textSize="25sp"
-            android:textStyle="bold"
-            android:textColor="#061F4D"
-            android:text="Profile"
-            android:gravity="center"/>
-
-        <View
-            android:layout_marginStart="15dp"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@drawable/settings_icon_purple"/>
-    </LinearLayout>
+            android:layout_centerInParent="true"
+            android:gravity="center"
+            android:text="Profile"
+            android:textColor="#061F4D"
+            android:textSize="25sp"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/settings_button"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginEnd="15dp"
+            android:scaleY="1.2"
+            android:scaleX="1.2"
+            android:background="@drawable/settings_icon_purple"
+            android:layout_alignParentEnd="true"/>
+    </RelativeLayout>
 
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_picture"
         android:layout_width="wrap_content"
         android:layout_height="200dp"
         android:src="@drawable/default_profile"
-        android:background="@drawable/white_box_rounded"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"/>
 
@@ -128,10 +132,12 @@
 
 
     <LinearLayout
+        android:id="@+id/acceptfriends_button"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:background="@drawable/white_box_rounded"
+        android:padding="5dp"
         android:weightSum="6"
         android:orientation="horizontal">
 
@@ -168,6 +174,7 @@
         android:layout_height="60dp"
         android:background="@drawable/white_box_rounded"
         android:weightSum="6"
+        android:padding="5dp"
         android:orientation="horizontal">
 
         <View
