--- a/app/src/main/res/layout/activity_accept_friends.xml
+++ b/app/src/main/res/layout/activity_accept_friends.xml
@@ -7,65 +7,54 @@
     android:orientation="vertical"
     android:background="@color/white">
 
-    <RelativeLayout
-        android:id="@+id/header_layout"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="30dp">
+        <RelativeLayout
+            android:id="@+id/header_layout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:orientation="horizontal"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="30dp">
 
-        <Button
-            android:id="@+id/profile_button"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/profile_purple"/>
+            <Button
+                android:id="@+id/back_button"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_width="30dp"
+                android:layout_height="15dp"
+                android:background="@drawable/down_arrow_purple"/>
 
-        <Button
-            android:id="@+id/search_button"
-            android:layout_marginStart="20dp"
-            android:layout_toEndOf="@id/profile_button"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/search_purple"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="Add Friends"
+                android:textColor="#061F4D"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Chats"
-            android:textSize="20sp"
-            android:layout_marginStart="85dp"
-            android:textColor="#061F4D"
-            android:textStyle="bold"/>
+            <Button
+                android:id="@+id/addfriend_button"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_width="30dp"
+                android:layout_height="10dp"
+                android:background="@drawable/settings_purple"/>
+        </RelativeLayout>
 
-
-        <Button
-            android:layout_alignParentEnd="true"
-            android:id="@+id/addfriend_button"
-            android:layout_marginStart="120dp"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:scaleY="1.2"
-            android:scaleX="1.2"
-            android:background="@drawable/add_person_filled_purple"/>
-
-    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/Body_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="13"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="20dp">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/chatspage_recyclerview"
+            android:id="@+id/addusers_recycle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
-
 
     </LinearLayout>
 
@@ -96,7 +85,7 @@
                 android:layout_width="40dp"
                 android:layout_height="35dp"
                 android:layout_marginHorizontal="30dp"
-                android:background="@drawable/chat_highlighted"/>
+                android:background="@drawable/chat_grey"/>
 
             <Button
                 android:id="@+id/Camerapage_button"
