--- a/app/src/main/res/layout/activity_main_splash_screen.xml
+++ b/app/src/main/res/layout/activity_main_splash_screen.xml
@@ -5,7 +5,7 @@
     android:background="#161A25"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".main_splash_screen">
 
     <TextView
         android:layout_width="wrap_content"
