--- a/app/src/main/res/layout/login_page.xml
+++ b/app/src/main/res/layout/login_page.xml
@@ -50,14 +50,15 @@
         android:layout_marginTop="5dp"
         android:layout_marginRight="90dp"
         android:background="@drawable/white_box_top_curve"
-        android:hint="   Username"
+        android:hint="Email"
         android:drawableStart="@drawable/person_icon_grey"
+        android:drawablePadding="10dp"
         android:textColorHint="#918B8B"
         android:textStyle="bold"
         android:paddingStart="20dp"
         android:textSize="20sp"
         android:inputType="text"
-        android:textColor="#FFFFFF"
+        android:textColor="#161A25"
         android:backgroundTint="#FFFFFF" />
 
     <EditText
@@ -68,13 +69,14 @@
         android:layout_height="80dp"
         android:layout_marginRight="90dp"
         android:background="@drawable/white_box_bottom_curve"
-        android:hint="   Password"
+        android:hint="Password"
         android:drawableLeft="@drawable/lock_icon_grey"
+        android:drawablePadding="10dp"
         android:textColorHint="#918B8B"
         android:textStyle="bold"
-        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
         android:textSize="20sp"
-        android:textColor="#FFFFFF"
+        android:textColor="#161A25"
         android:inputType="textPassword"
         android:backgroundTint="#FFFFFF" />
 
@@ -90,11 +92,11 @@
         android:layout_height="match_parent"
         android:src="#32367E" />
 
-    <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_centerInParent="true"
-        android:src="@drawable/fire_icon_white" />
+      <ImageView
+          android:layout_width="40dp"
+          android:layout_height="40dp"
+          android:layout_centerInParent="true"
+          android:src="@drawable/fire_icon_white" />
 </RelativeLayout>
 
     <TextView
@@ -111,22 +113,30 @@
         android:layout_marginRight="-20dp"/>
 
     <Button
+        android:id="@+id/login_button"
         android:layout_below="@+id/forgot_password"
         android:layout_marginTop="50dp"
-        android:id="@+id/login_button"
         android:layout_width="200dp"
         android:layout_height="80dp"
         android:background="@drawable/purple_box_right_curve"
-        android:text="Register"
+        android:text="Log in"
         android:textAllCaps="false"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         android:textStyle="bold" />
 
-
-
-
-
+    <TextView
+        android:id="@+id/signup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        android:text="Sign Up"
+        android:textSize="15sp"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:layout_marginRight="-20dp"/>
 
   </RelativeLayout>
 </RelativeLayout>
