--- a/app/src/main/res/layout/registration_page.xml
+++ b/app/src/main/res/layout/registration_page.xml
@@ -44,30 +44,50 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/SignUp"
             android:layout_width="150dp"
             android:layout_height="60dp"
             android:paddingTop="5dp"
-            android:text="     Login"
+            android:text="     Sign Up"
             android:background="@drawable/purple_box_left_curve"
             android:layout_alignParentEnd="true"
             android:textColor="@color/white"
             android:textSize="30sp"/>
 
         <EditText
-            android:id="@+id/Email"
+            android:id="@+id/Username"
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_marginTop="120dp"
             android:layout_marginRight="90dp"
             android:background="@drawable/white_box_top_curve"
-            android:hint="   Username"
+            android:hint="Username"
             android:drawableStart="@drawable/person_icon_grey"
+            android:drawablePadding="10dp"
             android:textColorHint="#918B8B"
             android:textStyle="bold"
             android:paddingStart="20dp"
             android:textSize="20sp"
             android:inputType="text"
-            android:textColor="#FFFFFF"
+            android:textColor="#161A25"
+            android:backgroundTint="#FFFFFF" />
+
+        <EditText
+            android:layout_marginTop="1dp"
+            android:layout_below="@id/Username"
+            android:id="@+id/Email"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginRight="90dp"
+            android:background="@drawable/white_box_square"
+            android:hint="Email"
+            android:drawableLeft="@drawable/rocket_icon_grey"
+            android:drawablePadding="10dp"
+            android:textColorHint="#918B8B"
+            android:textStyle="bold"
+            android:paddingLeft="20dp"
+            android:textSize="20sp"
+            android:textColor="#161A25"
             android:backgroundTint="#FFFFFF" />
 
         <EditText
@@ -77,32 +97,15 @@
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_marginRight="90dp"
-            android:background="@drawable/white_box_square"
-            android:hint="   Email"
-            android:drawableLeft="@drawable/rocket_icon_grey"
-            android:textColorHint="#918B8B"
-            android:textStyle="bold"
-            android:paddingLeft="20dp"
-            android:textSize="20sp"
-            android:textColor="#FFFFFF"
-            android:inputType="textPassword"
-            android:backgroundTint="#FFFFFF" />
-
-        <EditText
-            android:layout_marginTop="1dp"
-            android:layout_below="@id/Password"
-            android:id="@+id/Username"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginRight="90dp"
             android:background="@drawable/white_box_bottom_curve"
-            android:hint="   Password"
+            android:hint="Password"
             android:drawableLeft="@drawable/lock_icon_grey"
+            android:drawablePadding="10dp"
             android:textColorHint="#918B8B"
             android:textStyle="bold"
             android:paddingLeft="20dp"
             android:textSize="20sp"
-            android:textColor="#FFFFFF"
+            android:textColor="#161A25"
             android:inputType="textPassword"
             android:backgroundTint="#FFFFFF" />
 
@@ -125,6 +128,18 @@
                 android:src="@drawable/fire_icon_white" />
         </RelativeLayout>
 
+        <TextView
+            android:id="@+id/LogIn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="20dp"
+            android:text="Log In"
+            android:textSize="15sp"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:layout_marginRight="-20dp"/>
 
     </RelativeLayout>
 </RelativeLayout>
