--- a/app/src/main/res/layout/settings_page.xml
+++ b/app/src/main/res/layout/settings_page.xml
@@ -6,20 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".Chat_Activity">
 
-
-
     <LinearLayout
         android:id="@+id/search_div"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <TextView
+        <Button
             android:id="@+id/back_arrow"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginLeft="30dp"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="35dp"
             android:background="@drawable/back_icon_mauve" />
 
         <TextView
@@ -93,22 +91,17 @@
                 android:gravity="center_vertical"/>
 
                 <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="      Username"
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="Name"
                     android:paddingRight="20dp"
-                android:layout_weight="1"
-                android:textColor="#000000"
+                    android:layout_weight="1"
+                    android:textColor="#000000"
                     android:layout_marginTop="10dp"
-                android:gravity="right"/>
+                    android:gravity="right"/>
 
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#2F315A"/>
-
 
         </LinearLayout>
 
@@ -131,32 +124,26 @@
                 android:weightSum="2"
                 android:orientation="horizontal">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="      Username"
-                android:layout_weight="1"
-                android:textColor="#2B2E70"
-                android:gravity="center_vertical"/>
-
                 <TextView
-                android:layout_width="wrap_content"
-                    android:paddingRight="20dp"
-                android:layout_height="match_parent"
-                android:text="      Username"
-                android:layout_weight="1"
-                android:textColor="#000000"
-                    android:layout_marginTop="10dp"
-                android:gravity="right"/>
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="      Username"
+                    android:layout_weight="1"
+                    android:textColor="#2B2E70"
+                    android:gravity="center_vertical"/>
+
+                    <TextView
+                        android:id="@+id/username"
+                        android:layout_width="wrap_content"
+                        android:paddingRight="20dp"
+                        android:layout_height="match_parent"
+                        android:text="Username"
+                        android:layout_weight="1"
+                        android:textColor="#000000"
+                        android:layout_marginTop="10dp"
+                        android:gravity="right"/>
 
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#2F315A"/>
-
-
         </LinearLayout>
 
         <View
@@ -186,22 +173,17 @@
                 android:gravity="center_vertical"/>
 
                 <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                    android:id="@+id/birthday"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:paddingRight="20dp"
-                android:text="      Username"
-                android:layout_weight="1"
-                android:textColor="#000000"
+                    android:text="birthday"
+                    android:layout_weight="1"
+                    android:textColor="#000000"
                     android:layout_marginTop="10dp"
-                android:gravity="right"/>
+                    android:gravity="right"/>
 
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#2F315A"/>
-
 
         </LinearLayout>
 
@@ -232,21 +214,17 @@
                 android:gravity="center_vertical"/>
 
                 <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                    android:id="@+id/number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:paddingRight="20dp"
-                android:text="      Username"
-                android:layout_weight="1"
-                android:textColor="#000000"
+                    android:text="Number"
+                    android:layout_weight="1"
+                    android:textColor="#000000"
                     android:layout_marginTop="10dp"
-                android:gravity="right"/>
+                    android:gravity="right"/>
 
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#2F315A"/>
 
 
         </LinearLayout>
@@ -277,21 +255,17 @@
                 android:gravity="center_vertical"/>
 
                 <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                    android:id="@+id/email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
                     android:paddingRight="20dp"
-                android:text="      Username"
-                android:layout_weight="1"
-                android:textColor="#000000"
+                    android:text="Email"
+                    android:layout_weight="1"
+                    android:textColor="#000000"
                     android:layout_marginTop="10dp"
-                android:gravity="right"/>
+                    android:gravity="right"/>
 
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#2F315A"/>
 
 
         </LinearLayout>
@@ -299,47 +273,6 @@
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="#2F315A"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_height="40dp"
-            android:orientation="horizontal">
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:weightSum="2"
-                android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:text="      Password"
-                android:layout_weight="1"
-                android:textColor="#2B2E70"
-                android:gravity="center_vertical"/>
-
-                <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                    android:paddingRight="20dp"
-                android:text="      ******"
-                android:layout_weight="1"
-                android:textColor="#000000"
-                    android:layout_marginTop="10dp"
-                android:gravity="right"/>
-
-            </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:background="#2F315A"/>
-
-
-        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
