--- a/app/src/main/res/layout/chat_page.xml
+++ b/app/src/main/res/layout/chat_page.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:orientation="vertical"
     tools:context=".Chat_Activity">
 
 
     <LinearLayout
         android:id="@+id/search_div"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:background="@color/white"
         android:orientation="horizontal"
         >
@@ -22,8 +23,10 @@
 
             <Button
                 android:id="@+id/back_arrow"
-                android:layout_width="20dp"
-                android:layout_height="25dp"
+                android:layout_width="30dp"
+                android:layout_height="35dp"
+                android:scaleX="0.67"
+                android:scaleY="0.67"
                 android:background="@drawable/back_purple"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="15dp"/>
@@ -35,10 +38,10 @@
                 android:text="Dan"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:textSize="33sp"
+                android:textSize="35sp"
                 android:layout_centerVertical="true"
                 android:layout_toEndOf="@id/back_arrow"
-                android:layout_marginStart="15dp"/>
+                android:layout_marginStart="5dp"/>
 
             <TextView
                 android:id="@+id/call_btn"
@@ -54,116 +57,21 @@
 
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_height="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/messages_recycler"
+        android:layout_height="0dp"
         android:layout_width="match_parent"
-        android:layout_below="@+id/search_div"
-        android:orientation="vertical">
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="right"
-            android:background="@drawable/chatspage_seperator_box">
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingVertical="8dp"
-                android:layout_marginEnd="17dp"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Shayaan"
-                    android:layout_gravity="end"
-                    android:textColor="#FF0000"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Hello there!"
-                    android:textSize="15sp"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="10:32"
-                    android:textSize="8sp"
-                    android:layout_gravity="right"
-                    android:textColor="#8497D0"/>
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_gravity="center_vertical"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@drawable/chatspage_seperator_box">
-
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingVertical="8dp"
-                android:orientation="vertical"
-                android:layout_marginStart="17dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Dan"
-                    android:textColor="#2B2E70"
-                    android:textStyle="bold"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="General Kenobi!"
-                    android:textSize="15sp"
-                    android:textColor="@color/black"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="10:32"
-                    android:textSize="8sp"
-                    android:textColor="#8497D0"/>
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-
-    </LinearLayout>
+        android:layout_weight="10"
+        android:orientation="vertical"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="#F1F1F1"
-        android:layout_alignParentBottom="true"
         android:gravity="center">
 
         <Button
-            android:id="@+id/camera_button"
-            android:layout_width="0dp"
-            android:layout_height="30dp"
-            android:layout_weight="1.2"
-            android:layout_marginHorizontal="5dp"
-            android:background="@drawable/camera_grey"/>
-
-        <Button
+            android:layout_marginStart="10dp"
             android:id="@+id/gallery_button"
             android:layout_width="0dp"
             android:layout_height="30dp"
@@ -172,6 +80,7 @@
             android:background="@drawable/gallery_grey"/>
 
         <EditText
+            android:id="@+id/message_text"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="9"
@@ -200,4 +109,4 @@
 
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
