--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -12,60 +12,74 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#9D9C9C"
-        android:layout_marginBottom="80dp">
+        android:layout_marginBottom="80dp"/>
 
-    </androidx.camera.view.PreviewView>
+
+    <TextView
+        android:id="@+id/video_duration"
+        android:layout_width="60dp"
+        android:layout_height="wrap_content"
+        android:padding="3dp"
+        android:text="00:00"
+        android:textAlignment="center"
+        android:textColor="#FF0000"
+        android:textStyle="bold"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/header_layout"/>
 
     <RelativeLayout
         android:id="@+id/header_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_margin="20dp">
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/profile_button"
-            android:layout_alignParentStart="true"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/profile"/>
+            android:layout_alignParentStart="true"
+            android:background="@drawable/profile" />
 
         <Button
             android:id="@+id/search_button"
-            android:layout_marginStart="20dp"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/search"
-            android:layout_toRightOf="@id/profile_button"/>
+            android:layout_marginStart="20dp"
+            android:layout_toRightOf="@id/profile_button"
+            android:background="@drawable/search" />
 
         <Button
             android:id="@+id/addfriend_button"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/add_friend"
-            android:layout_toStartOf="@id/vertical_buttons"/>
+            android:layout_toStartOf="@id/vertical_buttons"
+            android:background="@drawable/add_friend" />
 
         <LinearLayout
             android:id="@+id/vertical_buttons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="20dp">
+            android:layout_marginStart="20dp"
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/flipcamera_button"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:background="@drawable/flip_camera"/>
+                android:background="@drawable/flip_camera" />
 
             <Button
                 android:id="@+id/flash_button"
-                android:layout_marginTop="20dp"
-                android:layout_gravity="center_horizontal"
                 android:layout_width="20dp"
                 android:layout_height="30dp"
-                android:background="@drawable/flash_off"/>
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/flash_off" />
 
         </LinearLayout>
     </RelativeLayout>
@@ -90,7 +104,9 @@
             android:id="@+id/shutter_button"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:background="@drawable/shutter"/>
+            android:background="@drawable/shutter"
+            android:scaleY="1.0"
+            android:scaleX="1.0"/>
 
         <Button
             android:id="@+id/filter_button"
