--- a/app/src/main/res/layout/registration_page.xml
+++ b/app/src/main/res/layout/registration_page.xml
@@ -26,6 +26,15 @@
         android:layout_height="270dp">
 
         <ImageView
+            android:layout_width="80dp"
+            android:layout_height="90dp"
+            android:layout_marginBottom="60dp"
+            android:layout_gravity="center"
+            android:background="@drawable/skull"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"/>
+
+        <ImageView
             android:id="@+id/myImageView"
             android:layout_width="280dp"
             android:layout_height="wrap_content"
@@ -48,6 +57,7 @@
             android:layout_width="150dp"
             android:layout_height="60dp"
             android:paddingTop="5dp"
+            android:layout_marginTop="20dp"
             android:text="     Sign Up"
             android:background="@drawable/purple_box_left_curve"
             android:layout_alignParentEnd="true"
@@ -121,25 +131,17 @@
                 android:layout_height="match_parent"
                 android:src="#32367E" />
 
-            <ImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+            <TextView
+                android:id="@+id/LogIn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:src="@drawable/fire_icon_white" />
+                android:text="Log In"
+                android:textColor="@color/white"
+                android:textSize="20sp"
+                android:textStyle="bold" />
         </RelativeLayout>
 
-        <TextView
-            android:id="@+id/LogIn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="20dp"
-            android:text="Log In"
-            android:textSize="15sp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
-            android:layout_marginRight="-20dp"/>
 
     </RelativeLayout>
 </RelativeLayout>
