--- a/app/src/main/res/layout/registration_page.xml
+++ b/app/src/main/res/layout/registration_page.xml
@@ -144,6 +144,18 @@
 
 
     </RelativeLayout>
+
+    <TextView
+        android:id="@+id/guest_user"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp"
+        android:text="Sign up as a guest user"
+        android:textColor="@color/white"
+        android:textSize="15sp"
+        android:textStyle="bold" />
 </RelativeLayout>
 
 
