--- a/app/src/main/res/layout/activity_credentials.xml
+++ b/app/src/main/res/layout/activity_credentials.xml
@@ -16,107 +16,107 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:text="What is your name?"
-            android:textSize="30sp"
             android:textColor="@color/white"
-            android:textStyle="bold"
-            android:layout_gravity="center_horizontal"/>
+            android:textSize="30sp" />
 
         <EditText
             android:id="@+id/firstname_edittext"
             android:layout_width="280dp"
             android:layout_height="65dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:background="@drawable/reset_edittext_box"
             android:hint="First Name"
+            android:textAlignment="center"
             android:textColor="#4B4B4B"
             android:textColorHint="#4B4B4B"
-            android:textSize="15sp"
-            android:textAlignment="center"
-            android:layout_gravity="center_horizontal"/>
+            android:textSize="15sp" />
 
         <EditText
             android:id="@+id/lastname_edittext"
             android:layout_width="280dp"
             android:layout_height="65dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
             android:background="@drawable/reset_edittext_box"
             android:hint="Last Name"
+            android:textAlignment="center"
             android:textColor="#4B4B4B"
             android:textColorHint="#4B4B4B"
-            android:textSize="15sp"
-            android:textAlignment="center"
-            android:layout_gravity="center_horizontal"/>
+            android:textSize="15sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="What is your birthday?"
-            android:textSize="30sp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="20dp"
-            android:layout_gravity="center_horizontal"/>
+            android:text="What is your birthday?"
+            android:textColor="@color/white"
+            android:textSize="30sp" />
 
         <LinearLayout
-            android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
             <EditText
                 android:id="@+id/Day_edittext"
                 android:layout_width="70dp"
                 android:layout_height="65dp"
-                android:background="@drawable/reset_edittext_box"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginHorizontal="2dp"
+                android:background="@drawable/white_box_rounded"
                 android:hint="26"
+                android:textAlignment="center"
                 android:textColor="#4B4B4B"
                 android:textColorHint="#4B4B4B"
-                android:textSize="15sp"
-                android:textAlignment="center"
-                android:layout_gravity="center_horizontal"/>
+                android:textSize="15sp" />
 
             <EditText
                 android:id="@+id/Month_edittext"
                 android:layout_width="70dp"
                 android:layout_height="65dp"
-                android:background="@drawable/reset_edittext_box"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginHorizontal="2dp"
+                android:background="@drawable/white_box_rounded"
                 android:hint="06"
+                android:textAlignment="center"
                 android:textColor="#4B4B4B"
                 android:textColorHint="#4B4B4B"
-                android:textSize="15sp"
-                android:textAlignment="center"
-                android:layout_gravity="center_horizontal"/>
+                android:textSize="15sp" />
 
             <EditText
                 android:id="@+id/Year_edittext"
                 android:layout_width="140dp"
                 android:layout_height="65dp"
-                android:background="@drawable/reset_edittext_box"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginHorizontal="2dp"
+                android:background="@drawable/white_box_rounded"
                 android:hint="2002"
+                android:textAlignment="center"
                 android:textColor="#4B4B4B"
                 android:textColorHint="#4B4B4B"
-                android:textSize="15sp"
-                android:textAlignment="center"
-                android:layout_gravity="center_horizontal"/>
+                android:textSize="15sp" />
         </LinearLayout>
 
         <Button
             android:id="@+id/sendcode_button"
-            android:layout_marginTop="50dp"
-            android:layout_marginStart="5dp"
             android:layout_width="160dp"
             android:layout_height="70dp"
-            android:background="@drawable/login_purple_button"
             android:layout_gravity="center_horizontal"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/login_purple_button"
+            android:paddingEnd="10dp"
+            android:paddingBottom="20dp"
             android:text="Login"
             android:textAllCaps="false"
-            android:paddingBottom="10dp"
-            android:paddingEnd="10dp"
-            android:textColor="@color/white"/>
+            android:textColor="@color/white"
+            android:textSize="25sp" />
 
     </LinearLayout>
 
