--- a/app/src/main/res/layout/stories_page.xml
+++ b/app/src/main/res/layout/stories_page.xml
@@ -22,8 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@drawable/back_purple"
-            android:scaleX="0.5"
-            android:scaleY="0.6"
+            android:scaleX="0.4"
+            android:scaleY="0.5"
             android:layout_marginLeft="5dp"/>
 
         <Button
@@ -31,7 +31,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/search_icon_purple"
+            android:scaleX="0.6"
+            android:scaleY="0.5"
+            android:background="@drawable/search_purple"
             android:layout_marginLeft="15dp"/>
 
         <TextView
@@ -49,6 +51,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:scaleX="0.7"
+            android:scaleY="0.7"
             android:background="@drawable/add_person_filled_purple"
             android:layout_marginStart="15dp"/>
 
@@ -57,6 +61,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginTop="3dp"
+            android:scaleX="0.9"
+            android:scaleY="0.9"
             android:background="@drawable/settings_icon_purple"
             android:layout_marginStart="15dp"/>
     </LinearLayout>
@@ -122,64 +129,114 @@
         android:text="  Quick Add"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="#061F4D"
         android:layout_marginTop="20dp"/>
 
-
     <LinearLayout
-        android:layout_marginTop="10dp"
-        android:layout_width="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_height="60dp"
-        android:background="@drawable/white_box_rounded"
-        android:weightSum="8"
-        android:orientation="horizontal">
-
-        <View
-            android:layout_marginStart="15dp"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
-            android:background="@drawable/cyclone_icon"/>
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="10">
 
         <LinearLayout
-            android:layout_gravity="center_vertical"
+            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:orientation="vertical">
+            android:layout_marginHorizontal="20dp"
+            android:layout_height="60dp"
+            android:background="@drawable/white_box_rounded"
+            android:weightSum="8"
+            android:orientation="horizontal">
 
-            <TextView
-                android:layout_marginTop="10dp"
-                android:layout_width="match_parent"
+            <View
+                android:layout_marginStart="15dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:layout_marginLeft="10dp"
-                android:textColor="#061F4D"
-                android:text="Friend Name"/>
+                android:layout_weight="2"
+                android:background="@drawable/cyclone_icon"/>
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:layout_marginLeft="10dp"
-                android:text="Recently Joined"
-                android:gravity="center_vertical"/>
+            <LinearLayout
+                android:layout_gravity="center_vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="4"
+                android:orientation="vertical">
 
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="20sp"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="#061F4D"
+                    android:text="Friend Name"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:layout_marginLeft="10dp"
+                    android:text="Recently Joined"
+                    android:gravity="center_vertical"/>
+
+
+            </LinearLayout>
+
+            <Button
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="15dp"
+                android:layout_width="0dp"
+                android:layout_height="30dp"
+                android:layout_weight="1"
+                android:background="@drawable/close_icon_black"/>
 
         </LinearLayout>
-
-        <Button
-            android:layout_gravity="center_vertical"
-            android:layout_marginStart="15dp"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:layout_weight="1"
-            android:background="@drawable/close_icon_black"/>
-
     </LinearLayout>
 
 
+    <RelativeLayout
+        android:id="@+id/Footer_layout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1.5"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/dock"
+            android:layout_marginHorizontal="60dp"/>
+        <LinearLayout
+            android:id="@+id/nav_dock"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="25dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/chats_button"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginHorizontal="30dp"
+                android:background="@drawable/chat_grey"/>
+
+            <Button
+                android:id="@+id/Camerapage_button"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginHorizontal="20dp"
+                android:background="@drawable/camera"/>
+
+            <Button
+                android:id="@+id/Stories_button"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginHorizontal="30dp"
+                android:background="@drawable/stories_highlighted"/>
+
+        </LinearLayout>
+
+    </RelativeLayout>
 
 
 
